# pythagorean-sieve

./: README.md  pyproject.toml
.github/workflows/: 6.yml  8.yml
examples/: basic_usage.py
src/pythagorean_sieve/: sieve.py
